--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -15,12 +15,16 @@
         android:theme="@style/Theme.Fastfood_app"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.CartActivity"
+            android:exported="true"
+            android:label="Giỏ hàng" />
     </application>
 </manifest>
