--- a/backend_fastfood_app/package.json
+++ b/backend_fastfood_app/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.0",
+    "env": "^0.0.2",
     "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1"
   }
 }
