--- a/backend_fastfood_app/package.json
+++ b/backend_fastfood_app/package.json
@@ -15,6 +15,9 @@
     "env": "^0.0.2",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.1"
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "postgres": "^3.4.7",
+    "sequelize": "^6.37.7"
   }
 }
