--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Cấp quyền truy cập Internet cho Retrofit -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true" android:allowBackup="true"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -13,14 +14,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fastfood_app"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
+
+        <!-- Màn hình khởi chạy chính của ứng dụng -->
         <activity
-            android:name=".MainActivity"
+            android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Các màn hình khác trong luồng xác thực -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
+        <!-- MainActivity cũ, giờ không còn là màn hình khởi chạy -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+            <!-- ĐÃ XÓA INTENT-FILTER LAUNCHER Ở ĐÂY -->
+        </activity>
+
     </application>
+
 </manifest>
