--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -14,17 +14,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fastfood_app"
         tools:targetApi="31">
+
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.LoginActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".activity.CartActivity"
-            android:exported="true"
-            android:label="Giỏ hàng" />
+            android:exported="true">
+        </activity>
+
     </application>
 </manifest>
