--- a/backend_fastfood_app/package.json
+++ b/backend_fastfood_app/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.0",
+    "dotenv": "^16.6.1",
     "env": "^0.0.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
