--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.fastfood">
 
-    <!-- Cấp quyền truy cập Internet cho Retrofit -->
+    <!-- Quyền truy cập Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Fastfood_app"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/Theme.Fastfood_app">
 
-        <!-- Màn hình khởi chạy chính của ứng dụng -->
+        <!-- Màn hình khởi động -->
         <activity
             android:name=".StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- Các màn hình khác trong luồng xác thực -->
+        <!-- Đăng nhập / đăng ký -->
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -36,13 +32,21 @@
             android:name=".RegisterActivity"
             android:exported="false" />
 
-        <!-- MainActivity cũ, giờ không còn là màn hình khởi chạy -->
+        <!-- Quên mật khẩu các bước -->
+        <activity
+            android:name=".ForgotPasswordPhoneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPasswordOtpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPasswordResetActivity"
+            android:exported="false" />
+
+        <!-- Main sau khi đăng nhập -->
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-            <!-- ĐÃ XÓA INTENT-FILTER LAUNCHER Ở ĐÂY -->
-        </activity>
+            android:exported="false" />
 
     </application>
-
 </manifest>
