--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true" android:allowBackup="true"
+        android:usesCleartextTraffic="true"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fastfood_app"
         tools:targetApi="31">
+
+        <!-- Màn hình chính -->
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
@@ -22,9 +25,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Các màn hình phụ -->
+        <activity
+            android:name=".activity.OrderHistoryActivity"
+            android:exported="false"
+            android:label="Lịch sử đơn hàng" />
+
         <activity
             android:name=".activity.CartActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="Giỏ hàng" />
     </application>
+
 </manifest>
