--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,11 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fastfood_app"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!-- Màn hình chính -->
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,16 +25,21 @@
             </intent-filter>
         </activity>
 
-        <!-- Các màn hình phụ -->
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.OrderHistoryActivity"
             android:exported="false"
             android:label="Lịch sử đơn hàng" />
-
         <activity
             android:name=".activity.CartActivity"
             android:exported="false"
             android:label="Giỏ hàng" />
-    </application>
 
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="false" />
+
+    </application>
 </manifest>
