con phan lich su chua co

--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -44,5 +44,10 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".activity.ForgotPasswordActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 </manifest>
