--- a/android_fastfood_app/app/src/main/AndroidManifest.xml
+++ b/android_fastfood_app/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name=".activity.ForgotPasswordActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activity.VnPayActivity"
+            android:exported="false">
+        </activity>
 
     </application>
 </manifest>
