--- a/backend_fastfood_app/package.json
+++ b/backend_fastfood_app/package.json
@@ -16,10 +16,12 @@
     "env": "^0.0.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.17.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.4.7",
+    "qs": "^6.14.0",
     "sequelize": "^6.37.7"
   }
 }
